add container class

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,40 @@
     <link rel="stylesheet" href="responsive.css">
     <title>prac-easybank</title>
 </head>
+
 <body>
-    <header>
+    <!-- navbar section start -->
+    <section>
         <nav>
             <div class="navbar">
-             <div class="logo">
-                <img src="images/logo.svg" alt="">
-             </div>
-             <div class="menu">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Careers</a></li>
-                </ul>
-             </div>
-             <div class="button">
-                <button>Request Invite</button>
-             </div>
+                <div class="logo">
+                    <img src="images/logo.svg" alt="">
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Careers</a></li>
+                    </ul>
+                </div>
+                <div class="button">
+                    <button>Request Invite</button>
+                </div>
             </div>
         </nav>
-    </header>
+    </section>
+    <!-- navbar section end -->
+
+    <!-- main section start -->
+    <section class="container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente reprehenderit itaque iusto quasi,
+            voluptatem modi beatae architecto unde error sequi.</p>
+    </section>
+    <!-- main section end-->
+
+
 </body>
+
 </html>
