--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- navbar section start -->
     <section>
         <nav>
-            <div class="navbar">
+            <div class="navbar container">
                 <div class="logo">
                     <img src="images/logo.svg" alt="">
                 </div>
@@ -35,9 +35,20 @@
     <!-- navbar section end -->
 
     <!-- main section start -->
-    <section class="container">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente reprehenderit itaque iusto quasi,
-            voluptatem modi beatae architecto unde error sequi.</p>
+    <section class="container main">
+        <div class="main-content">
+            <h1> Next generation digital banking</h1>
+            <p> Take your financial life online. Your Easybank account will be a one-stop-shop
+                for spending, saving, budgeting, investing, and much more.
+            </p>
+            <div class="button btn">
+                <button>Request Invite</button>
+            </div>
+        </div>
+        <div class="main-img">
+            <img src="images/image-mockups.png" alt="">
+        </div>
+
     </section>
     <!-- main section end-->
 
