complete change code

--- a/index.html
+++ b/index.html
@@ -5,53 +5,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
-    <title>prac-easybank</title>
+    <title>Document</title>
 </head>
 
 <body>
+    <!--================== header part start -->
     <!-- navbar section start -->
-    <section>
-        <nav>
-            <div class="navbar container">
-                <div class="logo">
-                    <img src="images/logo.svg" alt="">
-                </div>
-                <div class="menu">
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">Careers</a></li>
-                    </ul>
-                </div>
-                <div class="button">
-                    <button>Request Invite</button>
-                </div>
-            </div>
+    <section class="nav-section">
+        <nav class="container navbar">
+
+            <img src="images/logo.svg" alt="logo">
+
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Carrers</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+
+            <button class="btn">Request Invite</button>
+
+
         </nav>
     </section>
     <!-- navbar section end -->
 
-    <!-- main section start -->
-    <section class="container main">
-        <div class="main-content">
-            <h1> Next generation digital banking</h1>
-            <p> Take your financial life online. Your Easybank account will be a one-stop-shop
-                for spending, saving, budgeting, investing, and much more.
-            </p>
-            <div class="button btn">
-                <button>Request Invite</button>
+    <!-- banner section start -->
+    <section class="header-section">
+
+        <div class="container header-wrapper">
+            <div class="header-text">
+                <h1> Next generation digital banking</h1>
+                <p>
+                    Take your financial life online. Your Easybank account will be a one-stop-shop
+                    for spending, saving, budgeting, investing, and much more.
+                </p>
+                <button class="btn">Request Invite</button>
             </div>
-        </div>
-        <div class="main-img">
-            <img src="images/image-mockups.png" alt="">
+            <div class="header-img">
+                <img src="images/bg-intro-desktop.svg" alt="">
+                <img src="images/image-mockups.png" alt="">
+            </div>
         </div>
 
     </section>
-    <!-- main section end-->
-
+    <!-- banner section end -->
+    <!--================== header part start -->
 
 </body>
 
