--- a/index.html
+++ b/index.html
@@ -53,6 +53,41 @@
     <!-- banner section end -->
     <!--================== header part start -->
 
+    <section class="main-section">
+        <div class="container">
+            <div class="main-text">
+                <h1> Why choose Easybank?</h1>
+                <p> We leverage Open Banking to turn your bank account into your financial hub. Control
+                    your finances like never before.</p>
+            </div>
+            <div class="main-cart">
+                <div class="cart">
+                    <img src="images/icon-online.svg" alt="">
+                    <h1>Online Banking</h1>
+                    <p> Our modern web and mobile applications allow you to keep track of your finances
+                        wherever you are in the world.</p>
+                </div>
+                <div class="cart">
+                    <img src="images/icon-online.svg" alt="">
+                    <h1>Online Banking</h1>
+                    <p> Our modern web and mobile applications allow you to keep track of your finances
+                        wherever you are in the world.</p>
+                </div>
+                <div class="cart">
+                    <img src="images/icon-online.svg" alt="">
+                    <h1>Online Banking</h1>
+                    <p> Our modern web and mobile applications allow you to keep track of your finances
+                        wherever you are in the world.</p>
+                </div>
+                <div class="cart">
+                    <img src="images/icon-online.svg" alt="">
+                    <h1>Online Banking</h1>
+                    <p> Our modern web and mobile applications allow you to keep track of your finances
+                        wherever you are in the world.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
