--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!--================== header part start -->
+    <!--================== header+navbar part start -->
     <!-- navbar section start -->
     <section class="nav-section">
         <nav class="container navbar">
@@ -30,8 +30,8 @@
         </nav>
     </section>
     <!-- navbar section end -->
-
-    <!-- banner section start -->
+    <!-- =================== -->
+    <!-- header section start -->
     <section class="header-section">
 
         <div class="container header-wrapper">
@@ -50,10 +50,14 @@
         </div>
 
     </section>
-    <!-- banner section end -->
-    <!--================== header part start -->
+    <!-- header section end -->
+    <!--================== header+navbar part end -->
 
-    <section class="main-section">
+
+
+    <!--============== main section start -->
+    <!--  part-one start -->
+    <section class="main-section-one">
         <div class="container">
             <div class="main-text">
                 <h1> Why choose Easybank?</h1>
@@ -68,26 +72,80 @@
                         wherever you are in the world.</p>
                 </div>
                 <div class="cart">
-                    <img src="images/icon-online.svg" alt="">
-                    <h1>Online Banking</h1>
-                    <p> Our modern web and mobile applications allow you to keep track of your finances
-                        wherever you are in the world.</p>
+                    <img src="images/icon-budgeting.svg" alt="">
+                    <h1>Simple Budegetting</h1>
+                    <p> See exactly where your money goes each month. Receive notifications when you’re
+                        close to hitting your limits.</p>
                 </div>
                 <div class="cart">
-                    <img src="images/icon-online.svg" alt="">
-                    <h1>Online Banking</h1>
-                    <p> Our modern web and mobile applications allow you to keep track of your finances
-                        wherever you are in the world.</p>
+                    <img src="images/icon-onboarding.svg" alt="">
+                    <h1>Fast Onboarding</h1>
+                    <p> We don't do branches. Open your account in minutes online and start taking control
+                        of your finances right away.</p>
                 </div>
                 <div class="cart">
-                    <img src="images/icon-online.svg" alt="">
-                    <h1>Online Banking</h1>
-                    <p> Our modern web and mobile applications allow you to keep track of your finances
-                        wherever you are in the world.</p>
+                    <img src="images/icon-api.svg" alt="">
+                    <h1>Open API</h1>
+                    <p> Manage your savings, investments, pension, and much more from one account. Tracking
+                        your money has never been easier.</p>
                 </div>
             </div>
         </div>
     </section>
+    <!--  part-one end -->
+    <!-- ==================== -->
+
+    <!--  part-two start -->
+    <section class="main-section-two">
+        <div class="container">
+            <div class="main-text">
+                <h1> Latest Articles</h1>
+            </div>
+            <div class="main-cart">
+                <div class="cart cart-main">
+                    <img src="images/image-currency.jpg" alt="">
+                   <div class="cart-inner">
+                    <h5> By Claire Robinson</h5>
+                    <h3>Receive money in any currency with no fees</h3>
+                    <p> The world is getting smaller and we're becoming more mobile. So why should you be
+                        forced to only receive money in a single ….</p>
+                   </div>
+                </div>
+                <div class="cart cart-main">
+                    <img src="images/image-currency.jpg" alt="">
+                   <div class="cart-inner">
+                    <h5> By Claire Robinson</h5>
+                    <h3>Receive money in any currency with no fees</h3>
+                    <p> The world is getting smaller and we're becoming more mobile. So why should you be
+                        forced to only receive money in a single ….</p>
+                   </div>
+                </div>
+                <div class="cart cart-main">
+                    <img src="images/image-currency.jpg" alt="">
+                   <div class="cart-inner">
+                    <h5> By Claire Robinson</h5>
+                    <h3>Receive money in any currency with no fees</h3>
+                    <p> The world is getting smaller and we're becoming more mobile. So why should you be
+                        forced to only receive money in a single ….</p>
+                   </div>
+                </div>
+                <div class="cart cart-main">
+                    <img src="images/image-currency.jpg" alt="">
+                   <div class="cart-inner">
+                    <h5> By Claire Robinson</h5>
+                    <h3>Receive money in any currency with no fees</h3>
+                    <p> The world is getting smaller and we're becoming more mobile. So why should you be
+                        forced to only receive money in a single ….</p>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--  part-two end -->
+
+    <!-- ============================= -->
+    <!--=============  main section end -->
+
 </body>
 
 </html>
