--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 
@@ -104,39 +107,39 @@
             <div class="main-cart">
                 <div class="cart cart-main">
                     <img src="images/image-currency.jpg" alt="">
-                   <div class="cart-inner">
-                    <h5> By Claire Robinson</h5>
-                    <h3>Receive money in any currency with no fees</h3>
-                    <p> The world is getting smaller and we're becoming more mobile. So why should you be
-                        forced to only receive money in a single ….</p>
-                   </div>
+                    <div class="cart-inner">
+                        <h5> By Claire Robinson</h5>
+                        <h3>Receive money in any currency with no fees</h3>
+                        <p> The world is getting smaller and we're becoming more mobile. So why should you be
+                            forced to only receive money in a single ….</p>
+                    </div>
                 </div>
                 <div class="cart cart-main">
                     <img src="images/image-currency.jpg" alt="">
-                   <div class="cart-inner">
-                    <h5> By Claire Robinson</h5>
-                    <h3>Receive money in any currency with no fees</h3>
-                    <p> The world is getting smaller and we're becoming more mobile. So why should you be
-                        forced to only receive money in a single ….</p>
-                   </div>
+                    <div class="cart-inner">
+                        <h5> By Claire Robinson</h5>
+                        <h3>Receive money in any currency with no fees</h3>
+                        <p> The world is getting smaller and we're becoming more mobile. So why should you be
+                            forced to only receive money in a single ….</p>
+                    </div>
                 </div>
                 <div class="cart cart-main">
                     <img src="images/image-currency.jpg" alt="">
-                   <div class="cart-inner">
-                    <h5> By Claire Robinson</h5>
-                    <h3>Receive money in any currency with no fees</h3>
-                    <p> The world is getting smaller and we're becoming more mobile. So why should you be
-                        forced to only receive money in a single ….</p>
-                   </div>
+                    <div class="cart-inner">
+                        <h5> By Claire Robinson</h5>
+                        <h3>Receive money in any currency with no fees</h3>
+                        <p> The world is getting smaller and we're becoming more mobile. So why should you be
+                            forced to only receive money in a single ….</p>
+                    </div>
                 </div>
                 <div class="cart cart-main">
                     <img src="images/image-currency.jpg" alt="">
-                   <div class="cart-inner">
-                    <h5> By Claire Robinson</h5>
-                    <h3>Receive money in any currency with no fees</h3>
-                    <p> The world is getting smaller and we're becoming more mobile. So why should you be
-                        forced to only receive money in a single ….</p>
-                   </div>
+                    <div class="cart-inner">
+                        <h5> By Claire Robinson</h5>
+                        <h3>Receive money in any currency with no fees</h3>
+                        <p> The world is getting smaller and we're becoming more mobile. So why should you be
+                            forced to only receive money in a single ….</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -145,6 +148,46 @@
 
     <!-- ============================= -->
     <!--=============  main section end -->
+
+
+    <section class="footer">
+        <footer class="container">
+            <div class="footer-container">
+                <div class="left">
+                    <div class="logo">
+                        <img src="images/logowhite.svg" alt="">
+                        <ul>
+                            <li><i class="fa-brands fa-square-facebook"></i></li>
+                            <li><i class="fa-brands fa-youtube"></i></li>
+                            <li><i class="fa-brands fa-twitter"></i></li>
+                            <li><i class="fa-brands fa-pinterest"></i></li>
+                            <li><i class="fa-brands fa-square-instagram"></i></li>
+                        </ul>
+                    </div>
+
+                    <ul class="items">
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Blog</a></li>
+                    </ul>
+
+                    <ul class="items">
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Blog</a></li>
+                    </ul>
+
+
+                </div>
+                <div class="right">
+                  <div class="right-content">
+                    <button class="btn">Request Invite</button>
+                    <p>© Easybank. All Rights Reserved</p>
+                  </div>
+                </div>
+            </div>
+        </footer>
+    </section>
 
 </body>
 
