--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                     </ul>
 
                     <ul class="items">
-                        <li><a href="">About Us</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Blog</a></li>
+                        <li><a href="">Carrers</a></li>
+                        <li><a href="">Support</a></li>
+                        <li><a href="">Privacy Policy</a></li>
                     </ul>
 
 
